--- a/scss/component/hamburger/_base.scss
+++ b/scss/component/hamburger/_base.scss
@@ -52,7 +52,7 @@
   position: relative;
 
   @include mix.respond_to(min, m_screen) {
-    inline-size: map.get(var.$spacing, 16);
+    inline-size: map.get(var.$spacing, 32);
     block-size: 100%;
   }
 }
